--- a/association_rule_mining.ipynb
+++ b/association_rule_mining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
     "\n",
     "def count_defect_pairs(df_cond, keep_defects, distance_threshold):\n",
     "    \"\"\"\n",
-    "    Count the numnber of defect pairs that are < distance_threshold within each other\n",
+    "    Count the number of defect pairs that are < distance_threshold within each other\n",
     "    \"\"\"\n",
     "    defect_pair_counts = []\n",
     "    \n",
@@ -121,12 +121,10 @@
     "            pair_count = 0\n",
     "            defect_pair = [keep_defects[a], keep_defects[b]] # Pair of defects whose no. of occurrences we wish to calculate\n",
     "\n",
-    "            for insp_id in range(1, num_insps + 1):\n",
+    "            for insp_id in df_cond['InspectionID'].unique():\n",
     "            \n",
     "            # Inspection id which we are counting for\n",
     "                df = select_df(df_cond, insp_id, defect_pair)\n",
-    "\n",
-    "                cond_id = list(df['ConditionID'])\n",
     "                insp_id = list(df['InspectionID'])\n",
     "                dist = list(df['Distance'])\n",
     "                defects = list(df['PACP_Code']) # Defects which are selected from a particular inspection\n",
@@ -135,14 +133,18 @@
     "                    for j in range (i+1, len(defects)):\n",
     "                        defect_1, defect_2 = defects[i], defects[j]\n",
     "                        if (defect_1 == defect_pair[0] and defect_2 == defect_pair[1]) or (defect_2 == defect_pair[0] and defect_1 == defect_pair[1]):\n",
-    "                            if abs(dist[i] - dist[j]) < 5.0:\n",
+    "                            if abs(dist[i] - dist[j]) <= distance_threshold:\n",
     "                                pair_count = pair_count + 1\n",
-    "\n",
-    "            print('Number of ({}, {}) clusters is: {}'.format(keep_defects[a], keep_defects[b], pair_count))\n",
     "\n",
     "            defect_pair_counts.append([keep_defects[a], keep_defects[b], pair_count])\n",
     "            \n",
     "    return defect_pair_counts\n",
+    "\n",
+    "def calculate_length_of_pipeline(df_cond):\n",
+    "    # Find total length of pipeline\n",
+    "    df_temp = df_cond[df_cond['PACP_Code'] == 'Manhole']\n",
+    "    return df['Distance'].sum()\n",
+    "   \n",
     "\n",
     "def create_econometric_database(df_insp, cols, defects):\n",
     "    df_insp = df_insp[cols]\n",
@@ -178,43 +180,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of inspections is: 3690\n",
-      "Total number of defects \n",
-      "Tap             14708\n",
-      "Crack            7138\n",
-      "Manhole          7045\n",
-      "Fracture         6358\n",
-      "Root             6334\n",
-      "Deposit          6266\n",
-      "Broken           1395\n",
-      "Joint Offset     1146\n",
+      "Total number of inspections to begin with are: 8891\n",
+      "\n",
+      "Number of inspections which contain defects is: 4696\n",
+      "\n",
+      "Number of defects is as follows: \n",
+      "Tap             19354\n",
+      "Crack            9233\n",
+      "Manhole          8948\n",
+      "Fracture         8625\n",
+      "Deposit          8287\n",
+      "Root             7943\n",
+      "Broken           2058\n",
+      "Joint Offset     1943\n",
       "Name: PACP_Code, dtype: int64\n",
-      "Number of inspections with Fracture and Tap is: 1194\n",
-      "Total number of defects \n",
-      "Tap             6969\n",
-      "Fracture        5929\n",
-      "Crack           4980\n",
-      "Deposit         2979\n",
-      "Manhole         2257\n",
-      "Root            2220\n",
-      "Broken          1000\n",
-      "Joint Offset     603\n",
+      "\n",
+      "Number of inspections with R and F is: 692\n",
+      "\n",
+      "Number of defects in these inspections is as follows: \n",
+      "Tap             4073\n",
+      "Fracture        4025\n",
+      "Root            3576\n",
+      "Crack           3159\n",
+      "Manhole         1274\n",
+      "Deposit         1208\n",
+      "Broken           862\n",
+      "Joint Offset     724\n",
       "Name: PACP_Code, dtype: int64\n",
-      "Number of (Fracture, Tap) clusters is: 2259\n"
+      "\n",
+      "Number of (Root, Fracture) clusters is: 429\n"
      ]
     }
    ],
    "source": [
     "# Read the database of condition information from CSV\n",
-    "df_cond = pd.read_csv('Conditions_Hazen_Taylors.csv', sep=',')\n",
+    "df_cond = pd.read_csv('Conditions_Combined.csv', sep=',')\n",
     "df_cond.head();\n",
+    "\n",
+    "print(\"Total number of inspections to begin with are: {}\".format(df_cond['InspectionID'].max()))\n",
     "\n",
     "# Change names of defects\n",
     "df_cond = change_defect_names(df_cond)\n",
@@ -228,53 +238,38 @@
     "df_cond = delete_inspections_with_no_defects(df_cond, defects)\n",
     "\n",
     "# Count the number of inspections that remain after the deletion\n",
-    "print(\"Number of inspections is: {}\".format(df_cond['InspectionID'].nunique()))\n",
+    "print(\"\\nNumber of inspections which contain defects is: {}\".format(df_cond['InspectionID'].nunique()))\n",
     "\n",
     "# List the number of defects\n",
-    "print(\"Total number of defects \\n{}\".format(df_cond['PACP_Code'].value_counts()))\n",
-    "\n",
-    "# Counting the number of defect clusters\n",
-    "# defect_pair_counts = count_defect_pairs(df_cond, keep_defects, 5)\n",
-    "\n",
+    "print(\"\\nNumber of defects is as follows: \\n{}\".format(df_cond['PACP_Code'].value_counts()))\n",
     "\n",
     "\"\"\"\n",
     "Counting only Fracture and Tap\n",
-    "Delete all inspections which do not have at least one Fracture and Tap\n",
+    "Delete all inspections which do not have both Fracture and Tap\n",
     "\"\"\"\n",
     "\n",
-    "keep_defects = ['Fracture', 'Tap']\n",
+    "keep_defects = ['Root', 'Fracture']\n",
     "\n",
-    "defect = ['Fracture']\n",
-    "feature = ['Tap']\n",
+    "defect = keep_defects[0]\n",
+    "feature = keep_defects[1]\n",
     "\n",
-    "df_cond = delete_inspections_with_no_defects(df_cond, defect)\n",
-    "df_cond = delete_inspections_with_no_defects(df_cond, feature)\n",
+    "# # Deletes those inspections which don't have Fracture and Tap\n",
+    "df_cond = delete_inspections_with_no_defects(df_cond, [defect])\n",
+    "df_cond = delete_inspections_with_no_defects(df_cond, [feature])\n",
     "\n",
     "# Count the number of inspections that remain after the deletion\n",
-    "print(\"Number of inspections with {} and {} is: {}\".format(defect[0], feature[0], df_cond['InspectionID'].nunique()))\n",
+    "print(\"\\nNumber of inspections with {} and {} is: {}\".format(defect[0], feature[0], df_cond['InspectionID'].nunique()))\n",
     "\n",
     "# List the number of defects\n",
-    "print(\"Total number of defects \\n{}\".format(df_cond['PACP_Code'].value_counts()))\n",
+    "print(\"\\nNumber of defects in these inspections is as follows: \\n{}\".format(df_cond['PACP_Code'].value_counts()))\n",
     "\n",
-    "# Counting the number of defect clusters\n",
-    "defect_pair_counts = count_defect_pairs(df_cond, keep_defects, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Counting the number of defect clusters within 5 feet\n",
+    "defect_pair_counts = count_defect_pairs(df_cond, keep_defects, 0.5)\n",
     "\n",
-    "insp_ids = np.unique(list(df_cond['InspectionID']))\n",
+    "print('\\nNumber of ({}, {}) clusters is: {}'.format(keep_defects[0], keep_defects[1], defect_pair_counts[0][2]))\n",
     "\n",
-    "keep_ids = [] # Inspection IDs that we want to keep\n",
-    "\n",
-    "for insp_id in insp_ids:\n",
-    "    df_temp = df_cond[(df_cond['InspectionID'] == insp_id)]\n",
-    "    if df_temp['PACP_Code'].isin(defects).sum() > 0:\n",
-    "        keep_ids.append(insp_id)"
+    "# Count the total length of pipe in this dataframe\n",
+    "length = calculate_length_of_pipeline(df_cond)"
    ]
   },
   {
@@ -283,12 +278,82 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length: 297021.50039123016\n",
+      "Average Root spacing: 83.05970368882275 feet\n",
+      "Average Fracture spacing: 73.79416158788327 feet\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_defect1 = df_cond['PACP_Code'].value_counts()[keep_defects[0]]\n",
+    "num_defect2 = df_cond['PACP_Code'].value_counts()[keep_defects[1]]\n",
+    "\n",
+    "spacing1 = length/num_defect1\n",
+    "spacing2 = length/num_defect2\n",
+    "\n",
+    "print(\"Length: {}\".format(length))\n",
+    "print(\"Average {} spacing: {} feet\".format(keep_defects[0], spacing1))\n",
+    "print(\"Average {} spacing: {} feet\".format(keep_defects[1], spacing2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of (Root, Fracture) clusters is: 344\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If Taps and Fractures were uniformly distributed, calculate the number of co-occurrences\n",
+    "defect1 = [[keep_defects[0], i, 1] for i in range(0, int(length), int(spacing1))]\n",
+    "defect2 = [[keep_defects[1], i, 1] for i in range(0, int(length), int(spacing2))]\n",
+    "df_cond_fake = pd.DataFrame(defect1+defect2, columns = ['PACP_Code', 'Distance', 'InspectionID'])\n",
+    "defect_pair_counts = count_defect_pairs(df_cond_fake, [keep_defects[0], keep_defects[1]], 3)\n",
+    "print('\\nNumber of ({}, {}) clusters is: {}'.format(keep_defects[0], keep_defects[1], defect_pair_counts[0][2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "7193"
+       "2692"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Disregard instances that contain Root and Fracture at the same location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1502"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
