Changed length function

--- a/association_rule_mining.ipynb
+++ b/association_rule_mining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "'\\n\\nKey ideas to report in the paper\\n1. General statistics: Number of pipes with defects, most frequent defects \\n2. Number of instances of two defects being within the same vicinity, probabilities of these occurrences\\n3. Support, lift, etc.\\n\\n'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,8 +142,12 @@
     "\n",
     "def calculate_length_of_pipeline(df_cond):\n",
     "    # Find total length of pipeline\n",
-    "    df_temp = df_cond[df_cond['PACP_Code'] == 'Manhole']\n",
-    "    return df['Distance'].sum()\n",
+    "    insps = df_cond['InspectionID'].unique()\n",
+    "    length = 0.0\n",
+    "    for insp in insps:\n",
+    "        df_temp = df_cond[df_cond['InspectionID'] == insp]\n",
+    "        length += df_temp['Distance'].max()\n",
+    "    return length\n",
     "   \n",
     "\n",
     "def create_econometric_database(df_insp, cols, defects):\n",
@@ -180,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -189,12 +193,10 @@
      "text": [
       "Total number of inspections to begin with are: 8891\n",
       "\n",
-      "Number of inspections which contain defects is: 4696\n",
-      "\n",
       "Number of defects is as follows: \n",
-      "Tap             19354\n",
+      "Tap             29688\n",
+      "Manhole         17167\n",
       "Crack            9233\n",
-      "Manhole          8948\n",
       "Fracture         8625\n",
       "Deposit          8287\n",
       "Root             7943\n",
@@ -202,28 +204,30 @@
       "Joint Offset     1943\n",
       "Name: PACP_Code, dtype: int64\n",
       "\n",
-      "Number of inspections with R and F is: 692\n",
+      "Number of inspections with Joint Offset and Fracture is: 2040\n",
       "\n",
       "Number of defects in these inspections is as follows: \n",
-      "Tap             4073\n",
-      "Fracture        4025\n",
-      "Root            3576\n",
-      "Crack           3159\n",
-      "Manhole         1274\n",
-      "Deposit         1208\n",
-      "Broken           862\n",
-      "Joint Offset     724\n",
+      "Tap             10247\n",
+      "Fracture         8625\n",
+      "Crack            7326\n",
+      "Deposit          4171\n",
+      "Root             3983\n",
+      "Manhole          3795\n",
+      "Joint Offset     1943\n",
+      "Broken           1791\n",
       "Name: PACP_Code, dtype: int64\n",
       "\n",
-      "Number of (Root, Fracture) clusters is: 429\n"
+      "Number of (Joint Offset, Fracture) clusters is: 288\n",
+      "Length : 420091.00050309947\n"
      ]
     }
    ],
    "source": [
+    "cluster_size = 3.0\n",
+    "\n",
     "# Read the database of condition information from CSV\n",
     "df_cond = pd.read_csv('Conditions_Combined.csv', sep=',')\n",
     "df_cond.head();\n",
-    "\n",
     "print(\"Total number of inspections to begin with are: {}\".format(df_cond['InspectionID'].max()))\n",
     "\n",
     "# Change names of defects\n",
@@ -235,10 +239,12 @@
     "\n",
     "# Delete inspections which have no 'defects', i.e, fracture, crack, root, joint offset, deposit, broken\n",
     "defects = ['Fracture', 'Crack', 'Joint Offset', 'Root', 'Deposit', 'Broken']\n",
-    "df_cond = delete_inspections_with_no_defects(df_cond, defects)\n",
+    "# df_cond = delete_inspections_with_no_defects(df_cond, defects)\n",
+    "# print(\"Length : {}\".format(calculate_length_of_pipeline(df_cond)))\n",
+    "\n",
     "\n",
     "# Count the number of inspections that remain after the deletion\n",
-    "print(\"\\nNumber of inspections which contain defects is: {}\".format(df_cond['InspectionID'].nunique()))\n",
+    "# print(\"\\nNumber of inspections which contain defects is: {}\".format(df_cond['InspectionID'].nunique()))\n",
     "\n",
     "# List the number of defects\n",
     "print(\"\\nNumber of defects is as follows: \\n{}\".format(df_cond['PACP_Code'].value_counts()))\n",
@@ -248,48 +254,50 @@
     "Delete all inspections which do not have both Fracture and Tap\n",
     "\"\"\"\n",
     "\n",
-    "keep_defects = ['Root', 'Fracture']\n",
+    "keep_defects = ['Joint Offset', 'Fracture']\n",
     "\n",
-    "defect = keep_defects[0]\n",
-    "feature = keep_defects[1]\n",
-    "\n",
-    "# # Deletes those inspections which don't have Fracture and Tap\n",
-    "df_cond = delete_inspections_with_no_defects(df_cond, [defect])\n",
-    "df_cond = delete_inspections_with_no_defects(df_cond, [feature])\n",
+    "# Deletes those inspections which don't have defect1 or defect2\n",
+    "df_cond = delete_inspections_with_no_defects(df_cond, [keep_defects[0], keep_defects[1]])\n",
     "\n",
     "# Count the number of inspections that remain after the deletion\n",
-    "print(\"\\nNumber of inspections with {} and {} is: {}\".format(defect[0], feature[0], df_cond['InspectionID'].nunique()))\n",
+    "print(\"\\nNumber of inspections with {} and {} is: {}\".format(keep_defects[0], keep_defects[1], df_cond['InspectionID'].nunique()))\n",
     "\n",
     "# List the number of defects\n",
     "print(\"\\nNumber of defects in these inspections is as follows: \\n{}\".format(df_cond['PACP_Code'].value_counts()))\n",
     "\n",
     "# Counting the number of defect clusters within 5 feet\n",
-    "defect_pair_counts = count_defect_pairs(df_cond, keep_defects, 0.5)\n",
+    "defect_pair_counts = count_defect_pairs(df_cond, keep_defects, cluster_size)\n",
     "\n",
     "print('\\nNumber of ({}, {}) clusters is: {}'.format(keep_defects[0], keep_defects[1], defect_pair_counts[0][2]))\n",
     "\n",
     "# Count the total length of pipe in this dataframe\n",
-    "length = calculate_length_of_pipeline(df_cond)"
+    "length = calculate_length_of_pipeline(df_cond)\n",
+    "\n",
+    "print(\"Length : {}\".format(length))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length: 297021.50039123016\n",
-      "Average Root spacing: 83.05970368882275 feet\n",
-      "Average Fracture spacing: 73.79416158788327 feet\n"
+      "Number of Joint Offset is 1943\n",
+      "Number of Fracture is 8625\n",
+      "Length: 420091.00050309947\n",
+      "Average Joint Offset spacing: 216.20741147869248 feet\n",
+      "Average Fracture spacing: 48.7062029568811 feet\n"
      ]
     }
    ],
    "source": [
     "num_defect1 = df_cond['PACP_Code'].value_counts()[keep_defects[0]]\n",
     "num_defect2 = df_cond['PACP_Code'].value_counts()[keep_defects[1]]\n",
+    "print(\"Number of {} is {}\".format(keep_defects[0], num_defect1))\n",
+    "print(\"Number of {} is {}\".format(keep_defects[1], num_defect2))\n",
     "\n",
     "spacing1 = length/num_defect1\n",
     "spacing2 = length/num_defect2\n",
@@ -301,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -309,58 +317,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Number of (Root, Fracture) clusters is: 344\n"
+      "Number of (Joint Offset, Fracture) clusters is: 239\n"
      ]
     }
    ],
    "source": [
     "# If Taps and Fractures were uniformly distributed, calculate the number of co-occurrences\n",
-    "defect1 = [[keep_defects[0], i, 1] for i in range(0, int(length), int(spacing1))]\n",
-    "defect2 = [[keep_defects[1], i, 1] for i in range(0, int(length), int(spacing2))]\n",
+    "import numpy as np\n",
+    "\n",
+    "defect1 = [[keep_defects[0], i, 1] for i in np.arange(0, length, spacing1)]\n",
+    "defect2 = [[keep_defects[1], i, 1] for i in np.arange(0, length, spacing2)]\n",
     "df_cond_fake = pd.DataFrame(defect1+defect2, columns = ['PACP_Code', 'Distance', 'InspectionID'])\n",
-    "defect_pair_counts = count_defect_pairs(df_cond_fake, [keep_defects[0], keep_defects[1]], 3)\n",
+    "defect_pair_counts = count_defect_pairs(df_cond_fake, [keep_defects[0], keep_defects[1]], cluster_size)\n",
     "print('\\nNumber of ({}, {}) clusters is: {}'.format(keep_defects[0], keep_defects[1], defect_pair_counts[0][2]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2692"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Disregard instances that contain Root and Fracture at the same location"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1502"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(insp_ids)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1481,7 +1458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
