--- a/association_rule_mining.ipynb
+++ b/association_rule_mining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "'\\n\\nKey ideas to report in the paper\\n1. General statistics: Number of pipes with defects, most frequent defects \\n2. Number of instances of two defects being within the same vicinity, probabilities of these occurrences\\n3. Support, lift, etc.\\n\\n'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -204,26 +204,26 @@
       "Joint Offset     1943\n",
       "Name: PACP_Code, dtype: int64\n",
       "\n",
-      "Number of inspections with Joint Offset and Fracture is: 2040\n",
+      "Number of inspections with Root and Fracture is: 2974\n",
       "\n",
       "Number of defects in these inspections is as follows: \n",
-      "Tap             10247\n",
+      "Tap             14056\n",
       "Fracture         8625\n",
-      "Crack            7326\n",
-      "Deposit          4171\n",
-      "Root             3983\n",
-      "Manhole          3795\n",
-      "Joint Offset     1943\n",
-      "Broken           1791\n",
+      "Root             7943\n",
+      "Crack            7468\n",
+      "Manhole          5592\n",
+      "Deposit          4665\n",
+      "Broken           1848\n",
+      "Joint Offset     1333\n",
       "Name: PACP_Code, dtype: int64\n",
       "\n",
-      "Number of (Joint Offset, Fracture) clusters is: 288\n",
-      "Length : 420091.00050309947\n"
+      "Number of (Root, Fracture) clusters is: 1428\n",
+      "Length : 630738.5004255187\n"
      ]
     }
    ],
    "source": [
-    "cluster_size = 3.0\n",
+    "cluster_size = 5.0\n",
     "\n",
     "# Read the database of condition information from CSV\n",
     "df_cond = pd.read_csv('Conditions_Combined.csv', sep=',')\n",
@@ -254,7 +254,7 @@
     "Delete all inspections which do not have both Fracture and Tap\n",
     "\"\"\"\n",
     "\n",
-    "keep_defects = ['Joint Offset', 'Fracture']\n",
+    "keep_defects = ['Root', 'Fracture']\n",
     "\n",
     "# Deletes those inspections which don't have defect1 or defect2\n",
     "df_cond = delete_inspections_with_no_defects(df_cond, [keep_defects[0], keep_defects[1]])\n",
@@ -278,18 +278,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Joint Offset is 1943\n",
+      "Number of Root is 7943\n",
       "Number of Fracture is 8625\n",
-      "Length: 420091.00050309947\n",
-      "Average Joint Offset spacing: 216.20741147869248 feet\n",
-      "Average Fracture spacing: 48.7062029568811 feet\n"
+      "Length: 630738.5004255187\n",
+      "Average Root spacing: 79.40809523171582 feet\n",
+      "Average Fracture spacing: 73.12910149861086 feet\n"
      ]
     }
    ],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Number of (Joint Offset, Fracture) clusters is: 239\n"
+      "Number of (Root, Fracture) clusters is: 1087\n"
      ]
     }
    ],
