--- a/association_rule_mining.ipynb
+++ b/association_rule_mining.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Number of (Joint Offset, Fracture) clusters is: 79\n"
+      "Number of (Joint Offset, Fracture) clusters is: 396550\n"
      ]
     }
    ],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -377,9 +377,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'zone_curr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-853edcad1b40>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m             \u001b[0mzone_curr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minsp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefect_curr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdist_curr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m             \u001b[0mzone\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzone_curr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m             \u001b[0mzone_curr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minsp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefect_curr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdist_curr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'zone_curr' is not defined"
+     ]
+    }
+   ],
    "source": [
     "thresh = 5\n",
     "\n",
@@ -389,7 +401,7 @@
     "insps = insps[np.arange(0, 5, 1)]\n",
     "zone = []\n",
     "\n",
-    "for insp in [4]:\n",
+    "for insp in [4, 6]:\n",
     "    defect_prev, defect_curr = \"\",\"\"\n",
     "    dist_prev, dist_curr = -1*thresh, -1*thresh\n",
     "    df_temp = df_cond[df_cond['InspectionID'] == insp]\n",
@@ -441,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -607,13 +619,250 @@
        "29            1.0       NaN      NaN  "
       ]
      },
-     "execution_count": 150,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_temp = df_cond[df_cond['InspectionID'] == 4]\n",
+    "df_temp = df_cond[df_cond['InspectionID'].isin([4])]\n",
+    "df_temp = df_temp.sort_values(by=[\"Distance\"])\n",
+    "indices = df_temp.index\n",
+    "df_temp.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ConditionID</th>\n",
+       "      <th>InspectionID</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>Counter</th>\n",
+       "      <th>PACP_Code</th>\n",
+       "      <th>Continuous</th>\n",
+       "      <th>Value_1st_Dimension</th>\n",
+       "      <th>Value_2nd_Dimension</th>\n",
+       "      <th>Value_Percent</th>\n",
+       "      <th>Joint</th>\n",
+       "      <th>Clock_At_From</th>\n",
+       "      <th>Clock_To</th>\n",
+       "      <th>Remarks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>56</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9.600000</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>Deposit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>57</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13.700000</td>\n",
+       "      <td>271.0</td>\n",
+       "      <td>Deposit</td>\n",
+       "      <td>S01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>wanders</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>58</td>\n",
+       "      <td>6</td>\n",
+       "      <td>21.100000</td>\n",
+       "      <td>377.0</td>\n",
+       "      <td>Fracture</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>59</td>\n",
+       "      <td>6</td>\n",
+       "      <td>37.099998</td>\n",
+       "      <td>486.0</td>\n",
+       "      <td>Deposit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>75.500000</td>\n",
+       "      <td>783.0</td>\n",
+       "      <td>Fracture</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>61</td>\n",
+       "      <td>6</td>\n",
+       "      <td>75.500000</td>\n",
+       "      <td>838.0</td>\n",
+       "      <td>Broken</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>63</td>\n",
+       "      <td>6</td>\n",
+       "      <td>112.800003</td>\n",
+       "      <td>1106.0</td>\n",
+       "      <td>Deposit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>65</td>\n",
+       "      <td>6</td>\n",
+       "      <td>195.199997</td>\n",
+       "      <td>1560.0</td>\n",
+       "      <td>Deposit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>66</td>\n",
+       "      <td>6</td>\n",
+       "      <td>236.600006</td>\n",
+       "      <td>1765.0</td>\n",
+       "      <td>Deposit</td>\n",
+       "      <td>F01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>wanders</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ConditionID  InspectionID    Distance  Counter PACP_Code Continuous  \\\n",
+       "55           56             6    9.600000    196.0   Deposit        NaN   \n",
+       "56           57             6   13.700000    271.0   Deposit        S01   \n",
+       "57           58             6   21.100000    377.0  Fracture        NaN   \n",
+       "58           59             6   37.099998    486.0   Deposit        NaN   \n",
+       "59           60             6   75.500000    783.0  Fracture        NaN   \n",
+       "60           61             6   75.500000    838.0    Broken        NaN   \n",
+       "62           63             6  112.800003   1106.0   Deposit        NaN   \n",
+       "64           65             6  195.199997   1560.0   Deposit        NaN   \n",
+       "65           66             6  236.600006   1765.0   Deposit        F01   \n",
+       "\n",
+       "    Value_1st_Dimension  Value_2nd_Dimension  Value_Percent  Joint  \\\n",
+       "55                  NaN                  NaN            5.0   True   \n",
+       "56                  NaN                  NaN            5.0  False   \n",
+       "57                  NaN                  NaN            0.0   True   \n",
+       "58                  NaN                  NaN            5.0   True   \n",
+       "59                  NaN                  NaN            0.0   True   \n",
+       "60                  NaN                  NaN            0.0   True   \n",
+       "62                  NaN                  NaN            5.0   True   \n",
+       "64                  NaN                  NaN            5.0   True   \n",
+       "65                  NaN                  NaN            5.0  False   \n",
+       "\n",
+       "    Clock_At_From  Clock_To  Remarks  \n",
+       "55            7.0       NaN      NaN  \n",
+       "56            7.0       5.0  wanders  \n",
+       "57           12.0       8.0      NaN  \n",
+       "58            7.0       NaN      NaN  \n",
+       "59            1.0       NaN      NaN  \n",
+       "60            7.0       8.0      NaN  \n",
+       "62            7.0       NaN      NaN  \n",
+       "64            7.0       NaN      NaN  \n",
+       "65            7.0       5.0  wanders  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_temp = df_cond[df_cond['InspectionID'].isin([6])]\n",
     "df_temp = df_temp.sort_values(by=[\"Distance\"])\n",
     "indices = df_temp.index\n",
     "df_temp.head(10)"
@@ -737,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
