--- a/association_rule_mining.ipynb
+++ b/association_rule_mining.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,26 +388,31 @@
     "tap_codes = ['TB', 'TBI', 'TBD', 'TBC', 'TBA', 'TF', 'TFI', 'TFD', 'TFC', 'TFA', 'TFB', 'TR', 'TRI', 'TRD', 'TRC', 'TRA', 'TRB', 'TS', 'TSI', 'TSD', 'TSA', 'TSB']\n",
     "root_codes = ['RFB', 'RFL', 'RFC', 'RFJ', 'RMB', 'RML', 'RMC', 'RMJ', 'RBB', 'RBL', 'RBC', 'RBJ', 'RTB', 'RTL', 'RTC', 'RTJ']\n",
     "joint_offset_codes = ['JOS', 'JOM', 'JOL', 'JOSD', 'JOMD', 'JOLD', 'JSS', 'JSM', 'JSL', 'JAS', 'JAM', 'JAL']\n",
-    "keep_defects = deposit_codes+deformed_codes+infiltration_codes+hole_codes+fracture_codes+crack_codes+broken_codes+root_codes+joint_offset_codes\n"
+    "\n",
+    "defects_all = deposit_codes+deformed_codes+infiltration_codes+hole_codes+fracture_codes+crack_codes+broken_codes+root_codes+joint_offset_codes\n",
+    "defects_struct = deformed_codes+hole_codes+fracture_codes+crack_codes+broken_codes+joint_offset_codes\n",
+    "defects_operat = root_codes + deposit_codes\n",
+    "\n",
+    "keep_defects = defects_struct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of inspections to begin with are: 8891\n",
-      "Number of inspections after deletion are: 4753\n"
+      "Total number of inspections to begin with are: 1872\n",
+      "Number of inspections after deletion are: 938\n"
      ]
     }
    ],
    "source": [
     "# Count number of defect zones\n",
-    "df_cond = pd.read_csv('Conditions_Combined.csv', sep=',')\n",
+    "df_cond = pd.read_csv('Conditions_Hazen_Sawyer.csv', sep=',')\n",
     "df_cond.head();\n",
     "print(\"Total number of inspections to begin with are: {}\".format(df_cond['InspectionID'].nunique()))\n",
     "\n",
@@ -428,11 +433,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "thresh = 5\n",
+    "thresh = 3\n",
+    "\n",
     "\n",
     "insps = df_cond['InspectionID'].unique()\n",
     "zones = []\n",
@@ -465,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -473,17 +479,17 @@
       "text/plain": [
        "[[],\n",
        " [(1, 'JOL', 11.10000038)],\n",
-       " [(2, 'DAGS', 0.10000000099999999)],\n",
-       " [(2, 'DAGS', 37.90000153)],\n",
-       " [(4, 'DAGS', 1.0)],\n",
-       " [(4, 'DAGS', 57.29999924), (4, 'DAE', 57.29999924)],\n",
-       " [(4, 'DAGS', 77.09999847)],\n",
-       " [(4, 'DAGS', 121.90000149999999)],\n",
-       " [(4, 'DAGS', 129.5)],\n",
-       " []]"
+       " [],\n",
+       " [(6, 'FM', 21.10000038)],\n",
+       " [(6, 'FL', 75.5)],\n",
+       " [],\n",
+       " [(24, 'FL', 101.4000015)],\n",
+       " [],\n",
+       " [(25, 'CC', 13.69999981)],\n",
+       " [(25, 'CL', 19.5)]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,16 +511,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of colocated defects is 20880\n",
-      "Total number of defects is 37573\n",
-      "Max defects in a zone is 29\n"
+      "Number of defects in clusters with min 5 defects is 48\n",
+      "Total number of defects is 8327\n",
+      "Max defects in a zone is 6\n",
+      "Number of clusters 9\n"
      ]
     }
    ],
@@ -526,60 +533,41 @@
     "colocated = 0\n",
     "total = 0\n",
     "max_colocated = 0\n",
+    "num_def_in_cluster = 5\n",
+    "filtered_zones = []\n",
     "\n",
     "for zone in zones:\n",
-    "    if len(zone) > 1:\n",
+    "    if len(zone) >= num_def_in_cluster:\n",
     "        colocated += len(zone)\n",
+    "        filtered_zones.append(zone)\n",
     "        if len(zone) > max_colocated:\n",
     "            max_colocated = len(zone)\n",
     "            max_zone = zone\n",
     "    total += len(zone)\n",
     "    \n",
-    "print(f'Number of colocated defects is {colocated}')\n",
+    "print(f'Number of defects in clusters with min {num_def_in_cluster} defects is {colocated}')\n",
     "print(f'Total number of defects is {total}')\n",
-    "print(f'Max defects in a zone is {max_colocated}')"
+    "print(f'Max defects in a zone is {max_colocated}')\n",
+    "print(f'Number of clusters {len(filtered_zones)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(3309, 'RFJ', 77.90000153),\n",
-       " (3309, 'RFJ', 80.19999695),\n",
-       " (3309, 'JOL', 82.69999695),\n",
-       " (3309, 'RML', 84.30000305),\n",
-       " (3309, 'RFJ', 85.30000305),\n",
-       " (3309, 'JOM', 85.30000305),\n",
-       " (3309, 'JOL', 85.30000305),\n",
-       " (3309, 'JOL', 87.80000305),\n",
-       " (3309, 'RFJ', 87.80000305),\n",
-       " (3309, 'JOL', 90.40000153),\n",
-       " (3309, 'CC', 91.0),\n",
-       " (3309, 'RFJ', 92.59999847),\n",
-       " (3309, 'RFJ', 95.30000305),\n",
-       " (3309, 'JOM', 95.30000305),\n",
-       " (3309, 'RFJ', 97.90000153),\n",
-       " (3309, 'RFJ', 100.4000015),\n",
-       " (3309, 'FC', 100.9000015),\n",
-       " (3309, 'RFJ', 103.0999985),\n",
-       " (3309, 'CM', 105.6999969),\n",
-       " (3309, 'JOM', 105.6999969),\n",
-       " (3309, 'RFJ', 107.1999969),\n",
-       " (3309, 'JOM', 107.40000149999999),\n",
-       " (3309, 'JOL', 110.3000031),\n",
-       " (3309, 'FM', 110.90000149999999),\n",
-       " (3309, 'RFJ', 113.1999969),\n",
-       " (3309, 'JOL', 113.1999969),\n",
-       " (3309, 'JOM', 115.40000149999999),\n",
-       " (3309, 'RFJ', 115.40000149999999),\n",
-       " (3309, 'JOM', 118.0)]"
+       "[(917, 'CM', 21.70000076),\n",
+       " (917, 'CM', 24.60000038),\n",
+       " (917, 'CL', 27.39999962),\n",
+       " (917, 'CM', 27.70000076),\n",
+       " (917, 'FM', 27.70000076),\n",
+       " (917, 'FM', 29.70000076)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,9 +578,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count number of zones which have fractures or cracks only\n",
+    "num_zones_with_major_defects = 0\n",
+    "\n",
+    "\n",
+    "for zone in filtered_zones:\n",
+    "    for _, defect_code, _ in zone:\n",
+    "        if defect_code in broken_codes + deformed_codes + hole_codes:\n",
+    "            num_zones_with_major_defects += 1\n",
+    "            break\n",
+    "\n",
+    "print(num_zones_with_major_defects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[(917, 'CM', 21.70000076),\n",
+       "  (917, 'CM', 24.60000038),\n",
+       "  (917, 'CL', 27.39999962),\n",
+       "  (917, 'CM', 27.70000076),\n",
+       "  (917, 'FM', 27.70000076),\n",
+       "  (917, 'FM', 29.70000076)],\n",
+       " [(917, 'CM', 52.79999924),\n",
+       "  (917, 'CM', 55.59999847),\n",
+       "  (917, 'CC', 55.79999924),\n",
+       "  (917, 'CM', 58.70000076),\n",
+       "  (917, 'FC', 61.59999847)],\n",
+       " [(1027, 'FM', 114.3000031),\n",
+       "  (1027, 'FM', 116.09999850000001),\n",
+       "  (1027, 'JOM', 117.90000149999999),\n",
+       "  (1027, 'FM', 119.40000149999999),\n",
+       "  (1027, 'FM', 122.09999850000001)],\n",
+       " [(1047, 'FC', 42.90000153),\n",
+       "  (1047, 'JOM', 45.29999924),\n",
+       "  (1047, 'CL', 46.20000076),\n",
+       "  (1047, 'CC', 48.5),\n",
+       "  (1047, 'CL', 51.29999924)],\n",
+       " [(1106, 'CL', 16.0),\n",
+       "  (1106, 'CM', 18.20000076),\n",
+       "  (1106, 'CL', 21.0),\n",
+       "  (1106, 'CM', 23.29999924),\n",
+       "  (1106, 'CL', 26.0)],\n",
+       " [(1150, 'CM', 15.39999962),\n",
+       "  (1150, 'CL', 18.29999924),\n",
+       "  (1150, 'CM', 20.5),\n",
+       "  (1150, 'CM', 23.39999962),\n",
+       "  (1150, 'CM', 26.20000076),\n",
+       "  (1150, 'FM', 26.39999962)],\n",
+       " [(1238, 'CM', 57.0),\n",
+       "  (1238, 'CL', 58.5),\n",
+       "  (1238, 'CM', 61.0),\n",
+       "  (1238, 'CL', 62.29999924),\n",
+       "  (1238, 'CL', 63.40000153),\n",
+       "  (1238, 'CL', 63.40000153)],\n",
+       " [(1713, 'FM', 228.89999390000003),\n",
+       "  (1713, 'FM', 231.6999969),\n",
+       "  (1713, 'FC', 234.0),\n",
+       "  (1713, 'FC', 235.1999969),\n",
+       "  (1713, 'FM', 236.89999390000003)],\n",
+       " [(1763, 'FM', 46.5),\n",
+       "  (1763, 'FM', 47.59999847),\n",
+       "  (1763, 'FL', 49.59999847),\n",
+       "  (1763, 'FM', 52.20000076),\n",
+       "  (1763, 'FM', 54.79999924)]]"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_zones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 7652, 2: 298, 3: 21, 4: 4}"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Calculate the number of zones of various lengths\n",
